[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/templates/scene_fader/SceneFader.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/staubach/Staubach.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/templates/dialog/DialogButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/templates/dialog/Dialog.gd" type="Script" id=4]
[ext_resource path="res://scenes/templates/dialog/ExtendableMarginContainer.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.2, 0.160784, 0.12549, 1 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 2 )

[node name="Dialog" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fader" parent="." instance=ExtResource( 1 )]

[node name="ExtendableMarginContainer" parent="." instance=ExtResource( 5 )]
custom_constants/margin_right = 600
custom_constants/margin_top = 400
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="ExtendableMarginContainer"]
margin_left = 20.0
margin_top = 400.0
margin_right = 1320.0
margin_bottom = 1060.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ExtendableMarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1293.0
margin_bottom = 653.0
custom_constants/separation = 30

[node name="ExpandButton" type="Button" parent="ExtendableMarginContainer/PanelContainer/VBoxContainer"]
margin_right = 1286.0
margin_bottom = 20.0
text = "^ Expand dialog history ^"

[node name="PanelContainer" type="PanelContainer" parent="ExtendableMarginContainer/PanelContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 1286.0
margin_bottom = 358.0
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="ExtendableMarginContainer/PanelContainer/VBoxContainer/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1276.0
margin_bottom = 298.0

[node name="HistoryContainer" type="ScrollContainer" parent="ExtendableMarginContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
visible = false
margin_right = 1266.0
margin_bottom = 380.0
rect_min_size = Vector2( 0, 376 )
size_flags_vertical = 3

[node name="DialogHistory" type="RichTextLabel" parent="ExtendableMarginContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HistoryContainer"]
margin_right = 1266.0
margin_bottom = 72.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
fit_content_height = true

[node name="NpcText" type="RichTextLabel" parent="ExtendableMarginContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 1266.0
margin_bottom = 288.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[right]This is a test.
Of course, we could also have multiple lines.
When we increase the space required here, we'll have less space for the answers."
text = "This is a test.
Of course, we could also have multiple lines.
When we increase the space required here, we'll have less space for the answers."
fit_content_height = true

[node name="ScrollContainer" type="ScrollContainer" parent="ExtendableMarginContainer/PanelContainer/VBoxContainer"]
margin_top = 388.0
margin_right = 1286.0
margin_bottom = 646.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ExtendableMarginContainer/PanelContainer/VBoxContainer/ScrollContainer"]
margin_right = 1274.0
margin_bottom = 482.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" parent="ExtendableMarginContainer/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1274.0
margin_bottom = 77.0
text = "I have no idea what I'm doing."

[node name="Button2" parent="ExtendableMarginContainer/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 81.0
margin_right = 1274.0
margin_bottom = 158.0
text = "I'm going to kill you!"

[node name="Button3" parent="ExtendableMarginContainer/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 162.0
margin_right = 1274.0
margin_bottom = 239.0
text = "All evil shall be vanquished forever in this city..."

[node name="Button4" parent="ExtendableMarginContainer/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 243.0
margin_right = 1274.0
margin_bottom = 320.0
text = "I'm getting my good friend Van Helsing."

[node name="Button5" parent="ExtendableMarginContainer/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 324.0
margin_right = 1274.0
margin_bottom = 401.0
text = "Where wolf?"

[node name="Button6" parent="ExtendableMarginContainer/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 405.0
margin_right = 1274.0
margin_bottom = 482.0
text = "Vampirates are better than Ninjazis."
[connection signal="pressed" from="ExtendableMarginContainer/PanelContainer/VBoxContainer/ExpandButton" to="." method="_on_ExpandButton_pressed"]
